--- a/templates/books/admin.html
+++ b/templates/books/admin.html
@@ -14,6 +14,7 @@
             <div class="title-area">
                 <h2>Books</h2>
                 <a href="{% url 'books_new_book' %}" class="button"><i class="fa fa-plus">&nbsp;</i>Add New Book</a>
+                <a href="{% url 'books_import_books_upload' %}" class="button"><i class="fa fa-upload">&nbsp;</i>Import Books</a>
             </div>
             <table id="books">
                 <thead>
