Fixed bad display of books on mob.

--- a/templates/books/book.html
+++ b/templates/books/book.html
@@ -6,7 +6,7 @@
     <section class="content">
         <div class="row">
             <div class="box journal">
-                <div class="row collapse">
+                <div class="row">
                     {% include "books/book_detail.html" with book=book %}
                 </div>
             </div>
