--- a/templates/books/admin.html
+++ b/templates/books/admin.html
@@ -15,6 +15,7 @@
                 <h2>Books</h2>
                 <a href="{% url 'books_new_book' %}" class="button"><i class="fa fa-plus">&nbsp;</i>Add New Book</a>
                 <a href="{% url 'books_import_books_upload' %}" class="button"><i class="fa fa-upload">&nbsp;</i>Import Books</a>
+                <a href="{% url 'books_metrics' %}" class="button"><i class="fa fa-list-ol">&nbsp;</i> Metrics</a>
             </div>
             <table id="books">
                 <thead>
@@ -26,6 +27,8 @@
                     <th>ISBN</th>
                     <th>DOI</th>
                     <th>Date Published</th>
+                    <th>Reads</th>
+                    <th>Downloads</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -38,6 +41,8 @@
                         <td>{{ book.isbn }}</td>
                         <td>{{ book.doi }}</td>
                         <td>{{ book.date_published|date:"Y-m-d" }}</td>
+                        <td>{{ book.metrics.views }}</td>
+                        <td>{{ book.metrics.downloads }}</td>
                     </tr>
                     {% empty %}
                 {% endfor %}
