Added book metrics by month display

--- a/templates/books/metrics.html
+++ b/templates/books/metrics.html
@@ -5,6 +5,7 @@
 {% block breadcrumbs %}
     {{ block.super }}
     <li><a href="{% url 'books_admin' %}">Books Admin</a></li>
+    <li>Book Usage by Date</li>
 {% endblock %}
 
 
