--- a/templates/books/admin.html
+++ b/templates/books/admin.html
@@ -16,6 +16,7 @@
                 <a href="{% url 'books_new_book' %}" class="button"><i class="fa fa-plus">&nbsp;</i>Add New Book</a>
                 <a href="{% url 'books_import_books_upload' %}" class="button"><i class="fa fa-upload">&nbsp;</i>Import Books</a>
                 <a href="{% url 'books_metrics' %}" class="button"><i class="fa fa-list-ol">&nbsp;</i> Metrics</a>
+                <a href="{% url 'books_metrics_by_month' %}" class="button"><i class="fa fa-list-ol">&nbsp;</i> Metrics by Month</a>
             </div>
             <table id="books">
                 <thead>
