--- a/templates/books/edit_book.html
+++ b/templates/books/edit_book.html
@@ -61,6 +61,19 @@
                         {% endif %}
                     </ul>
                 </div>
+                <div class="title-area">
+                    <h2>Chapters</h2>
+                    <a class="button" href="{% url 'books_new_chapter' book.pk %}"><i class="fa fa-file">&nbsp;</i>Add Chapter</a>
+                </div>
+                <div class="content">
+                    <ul class="list-group">
+                        {% for chapter in book.chapter_set.all %}
+                            <li class="list-group-item"><a href="{% url 'books_edit_chapter' book.pk chapter.pk %}">{% if chapter.number %}[{{ chapter.number }}] {{ chapter.title }}{% endif %}</a></li>
+                        {% empty %}
+                        <li class="list-group-item list-group-item-info">No chapters</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
 
