Updated chapter drop down.

--- a/templates/books/elements/detail.html
+++ b/templates/books/elements/detail.html
@@ -29,6 +29,7 @@
         </div>
     </li>
 
+    {% if chapters %}
     <li class="accordion-item" data-accordion-item>
         <a href="#" class="accordion-title">Chapters</a>
         <div class="accordion-content" data-tab-content>
@@ -43,4 +44,5 @@
             </p>
         </div>
     </li>
+    {% endif %}
 </ul>
